--- a/css/styles-home-page.css
+++ b/css/styles-home-page.css
@@ -77,8 +77,12 @@
 	color: white;
 }
 
-#navbar-two-custom .navbar-toggler:onclick {
-	background-color: red;
+#navbar-two-custom .navbar-toggler {
+	border: none;
+}
+
+.custom-toggler .navbar-toggler-icon {
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2.5' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 /************************************ NAVIGATION SEARCH *************************************/
