--- a/css/styles-about-page.css
+++ b/css/styles-about-page.css
@@ -71,7 +71,7 @@
 /* show navbar one for all sizes greater than or equal to 992 */
 @media screen and (min-width: 992px) {
 	#navbar-one-custom {
-		display: block;
+		display: "";
 	}
 }
 
@@ -181,129 +181,132 @@
 	}
 }
 
-/************************************ HERO BANNER *************************************/
 
-/* background image */
-.bg-image {
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
+/************************************ ABOUT *************************************/
+
+#mission-vision-section h3.heading{
+    font-family: var(--ff-open-sans);
+	font-size: 30px;
 }
 
-/* BANNER TEXT */
-.banner-text {
-	color: white;
-}
-
-.banner-text h1, h1 span {
-	font-family: var(--ff-open-sans);
-}
-
-.banner-text p {
-	font-size: 20px;
-	padding: 0;
-}
-
-.banner-divider-dash {
-	height: 7px;
-	width: 65px;
-	background-color: var(--clr-signode-red);
-	margin-top: 25px;
-	margin-bottom: 25px;
+#mission-vision-section p.text{
+	font-family: var(--ff-source-sans);
+	font-size: 16px;
+	font-weight: 400;
+	color: rgb(51, 51, 51);
 }
 
 
-/* RESPONSIVE FONT SIZES */
+/************************************ MISSION AND VISION *************************************/
 
-/* applies to screen width greater than 1200 */
-@media screen and (min-width: 1200px) {
-	.banner-text h1, h1 span {
-		font-size: 65px;
+/* RESPONSIVE BREAKPOINTS */
+@media screen and (min-width: 768px){
+	#mission-vision-section .desktop {
+		display: "";
 	}
 
-	.banner-text p {
-		font-size: 20px;
-	}
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px){
-	.banner-text h1, h1 span {
-		font-size: 55px;
-	}
-
-	.banner-text p {
-		font-size: 18px;
+	#mission-vision-section .mobile {
+		display: none;
 	}
 }
 
 @media screen and (max-width: 767px){
-	.banner-text h1, h1 span {
-		font-size: 45px;
+	#mission-vision-section .desktop {
+		display: none;
 	}
 
-	.banner-text p {
-		font-size: 16px;
-	}
-}
-
-
-
-/* RESPONSIVE CSS
-  -------------------------------------------------- */
-
-@media (min-width: 40em) {
-	/* Bump up size of carousel content */
-	.carousel-caption p {
-		margin-bottom: 1.25rem;
-		font-size: 1.25rem;
-		line-height: 1.4;
+	#mission-vision-section .mobile {
+		display: "";
 	}
 }
 
-@media (min-width: 62em) {
-	.featurette-heading {
-		margin-top: 7rem;
-	}
+
+/************************************ VALUES *************************************/
+
+#values-section{
+	background-image: url("../images/about-page/values-background.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	padding-top: 100px;
+	padding-bottom: 80px;
 }
 
-/************************************ WHAT WE DO & WHY SIGNODE *************************************/
-#what-we-do-image {
-	border-radius: rounded;
-}
-
-/************************************ INDUSTRIES *************************************/
-
-.gallery-text {
-	font-family: var(--ff-open-sans);
-	color: black;
-	font-size: 18px;
-}
-
-/************************************ ANIMATED STATS *************************************/
-
-#stats {
-	background: var(--clr-signode-red);
-}
-
-#stats .col {
-	margin-top: 100px;
-	margin-bottom: 100px;
-
-}
-
-#stats .stats-heading {
-	font-size: 50px;
-	font-weight: bold;
+#values-section .sub-heading{
 	color: white;
 }
 
-#stats .stats-subheading{
-	font-size: 18px;
+#values-section .main-heading{
+	color: var(--clr-signode-red);
+}
+
+#values-section i{
+	color: var(--clr-signode-red);
+	font-size: 30px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+#values-section h3{
 	color: white;
+	font-size: 20px;
+}
+
+#values-section p{
+	color: white;
+	font-size: 16px;
+	font-weight: 300;
 }
 
 
-/************************************ DESKTOP FOOTER *************************************/
+/* RESPONSIVE BREAKPOINTS */
+/* desktop */
+@media screen and (min-width: 992px){
+	#values-section #values-desktop {
+		display: "";
+	}
+
+	#values-section #values-tablet {
+		display: none;
+	}
+
+	#values-section #values-mobile {
+		display: none;
+	}
+}
+
+/* tablet */
+@media screen and (min-width: 768px) and (max-width: 991px){
+	#values-section #values-desktop {
+		display: none;
+	}
+
+	#values-section #values-tablet {
+		display: "";
+	}
+
+	#values-section #values-mobile {
+		display: none;
+	}
+}
+
+/* mobile */
+@media screen and (max-width: 767px){
+	#values-section #values-desktop {
+		display: none;
+	}
+
+	#values-section #values-tablet {
+		display: none;
+	}
+
+	#values-section #values-mobile {
+		display: "";
+	}
+}
+
+/************************ DESKTOP FOOTER *************************************/
 footer {
 	background-color: black;
 }
@@ -364,7 +367,7 @@ footer {
 /* entire footer */
 @media screen and (min-width: 768px) {
 	.desktop {
-		display: block;
+		display: "";
 	}
 	.mobile {
 		display: none;
@@ -376,7 +379,7 @@ footer {
 		display: none;
 	}
 	.mobile {
-		display: block;
+		display: "";
 	}
 }
 
@@ -386,13 +389,13 @@ footer {
 		display: none;
 	}
 	.other-screen {
-		display: block;
+		display: "";
 	}
 }
 	
 @media screen and (max-width: 992px) {
 	.md-screen {
-		display: block;
+		display: "";
 	}
 
 	.other-screen {
