--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -43,9 +43,11 @@
                             <li>
                                 <a class="dropdown-item" href="brands.html">Brands</a>
                             </li>
-                            <li><hr class="dropdown-divider" /></li>
                             <li>
-                                <a class="dropdown-item" href="#">Something else here</a>
+                                <!-- <hr class="dropdown-divider" /> -->
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="careers.html">Careers</a>
                             </li>
                         </ul>
                     </li>
