--- a/css/styles-careers-page.css
+++ b/css/styles-careers-page.css
@@ -79,6 +79,7 @@
 	padding-bottom: 13px;
 }
 
+/* buttons */
 #jobs-section .card .card-body .apply-button {
 	border: none;
 	background-color: var(--clr-signode-red);
@@ -96,6 +97,10 @@
 	padding-bottom: 8px;
 }
 
+#jobs-section .card .card-body .apply-button:hover {
+	background-color: #802d1d;
+}
+
 #jobs-section .card .card-body .view-button {
 	border: none;
 	background-color: #c6c6c6;
@@ -111,6 +116,11 @@
 
 	padding-top: 8px;
 	padding-bottom: 8px;
+}
+
+
+#jobs-section .card .card-body .view-button:hover {
+	background-color: #969696;
 }
 
 #jobs-section .card .card-body .date-text {
@@ -137,3 +147,4 @@
 		column-count: 1;
 	}
 }
+
